--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,94 @@
-body {
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    padding: 0;
+    margin: 0;
+    font-family: "Roboto", sans-serif;
+}
+
+input:focus-visible {
+    outline: none;
+}
+
+::-webkit-scrollbar {
+    width: 7px;
+    height: 7px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+html, body, #root {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
 }
 
 main {
-  min-width: 100vw;
-  min-height: 100vh;
+    background: #FBFBFB;
+    display: flex;
+    height: 100%;
+    margin: 0 auto;
+    max-width: 1920px;
+    width: 100%;
+
+    .side-panel {
+        background: #DFDFDF;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        min-height: 100%;
+        padding: 0 10px;
+        width: 99px;
+
+        .side-panel-logo {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            margin-top: 32px;
+            width: 77px;
+            height: 77px;
+            border-radius: 40px;
+            background: #FFFFFF;
+            box-shadow: 0 16px 24px rgba(0, 0, 0, 0.06), 0 2px 6px rgba(0, 0, 0, 0.04), 0 0 1px rgba(0, 0, 0, 0.04);
+
+            span {
+                font-weight: bold;
+                font-size: 21px;
+                line-height: 25px;
+                text-transform: uppercase;
+                text-align: center;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 699px) {
+    main {
+        flex-direction: column;
+
+        .side-panel {
+            min-height: 99px;
+            min-width: 100%;
+            align-items: center;
+
+            .side-panel-logo {
+                margin: 0;
+            }
+        }
+
+        .packages {
+            .search-wrapper,
+            .heading {
+                margin-bottom: 25px;
+            }
+        }
+    }
 }
